# haveyoursay

./: .gitignore  README.md  haveyoursay.py  pyproject.toml  requirements.txt
src/: collect.py  dataset.py  download.py  utils.py
