[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haveyoursay"
authors = [{name = "Maximilian Haag", email = "maximilian.haag@gesis.org"}]
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
